create Table method